--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-2LY24SPCZP"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-2LY24SPCZP');
+        </script>
+
         {#
-        Created with help from the below repo, outlining all the possible tags that could belong in a <head>.
+        Created with help from the below repo, outlining all the possible tags that could belong in a head.
         View to explore more tags that may be useful, depending on the type of website being built
         https://github.com/joshbuchea/HEAD
         #}
 
-        {# CS-TODO: Update the _data/client.json file to automatically generate the correct <head> tags for you #}
+        {# CS-TODO: Update the _data/client.json file to automatically generate the correct head tags for you #}
 
         <!-- UTF character encoding means all characters under UTF-8, including emojis, render correctly -->
         <meta charset="UTF-8">
