redirect from vercel/netlify to g0.wtf

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
+
+        <script type="text/javascript">
+            if (window.location.href === "https://codestitch-advanced.vercel.app") {
+                window.location.href = "https://csa.g0.wtf/";
+            }
+        </script>
+
+        <script type="text/javascript">
+            if (window.location.href === "https://codestitch-advanced.netlify.app") {
+                window.location.href = "https://csa.g0.wtf/";
+            }
+        </script>
+
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-2LY24SPCZP"></script>
         <script>
